Bug 196955 - Parley widget. Wrong using path to vocabulary file
Summary: Parley widget. Wrong using path to vocabulary file
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Parley Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-18 01:58 UTC by Alexey Shildyakov
Modified: 2011-04-05 18:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Shildyakov 2009-06-18 01:58:22 UTC
Version:           0.9.2 (using KDE 4.2.4)
OS:                Linux
Installed from:    Gentoo Packages

Parley widget.
I use system in UTF encoding with Russian filenames. So my vocabulary file located in russian named folder. At first when i choose this file all is ok. when I restart KDE the words not show in widget. I check the settings dialog and see in path unicode style for example %20%86... Then I select the same vocabulary file. Path contains russian symbols for russian named folder. And for this session all is OK. When I restart KDE I must repeat this.
Comment 1 Alexey Shildyakov 2010-07-04 10:57:37 UTC
Works in KDE 4.4.4
Comment 2 Alexey Shildyakov 2010-07-11 07:49:12 UTC
Sorry. It's still exists on KDE 4.4.5
Comment 3 Frederik Gladhorn 2011-04-05 18:35:45 UTC
Git commit 30f76f9fb21928b01613b7e5bdc3a24087e0e7ae by Frederik Gladhorn.
Committed on 05/04/2011 at 18:38.
Pushed by gladhorn into branch 'master'.

Read and write config as KUrl not QString.

BUG: 196955
FIXED-IN: KDE 4.7

M  +2    -2    plasmoid/parley_plasma.cpp     

http://commits.kde.org/parley/30f76f9fb21928b01613b7e5bdc3a24087e0e7ae