Read and write config as KUrl not QString.

BUG: 196955
FIXED-IN: KDE 4.7